--- a/package.json
+++ b/package.json
@@ -271,7 +271,9 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-observable": "^1.0.0",
     "redux-react-hook": "^3.0.0",
+    "redux-starter-kit": "^0.4.0",
     "redux-thunk": "^2.3.0",
     "source-map-support": "^0.5.9"
   },
